--- a/client/src/pages/Home.css
+++ b/client/src/pages/Home.css
@@ -6,20 +6,21 @@
 		flex-wrap: wrap;
 		justify-content: center;
 		align-items: center;
-		gap: 2em;
 		padding: 2em;
 		box-sizing: border-box;
 
-		position: relative;
-		left: 50%;
-		right: 50%;
-		margin-left: -50vw;
-		margin-right: -50vw;
-		width: 100vw;
 
+		margin: 0 auto;
+		width: 100dvw;
+		margin-left: calc(50% - 50dvw);
+		
+
+
+		
 		.lesson {
 			width: 20em;
 			height: 15em;
+			margin: 0.75em;
 			display: flex;
 			justify-content: center;
 			align-items: center;
